--- a/timeline/timeline.css
+++ b/timeline/timeline.css
@@ -3,6 +3,11 @@
     margin: 0;  
     padding: 0;  
     background-color: #000000;
+    color: #333333;
+}
+
+body {
+	font-family: 'Alegreya SC', serif;
 }
 
 /* Tell the browser to render HTML 5 elements as block */  
@@ -14,12 +19,36 @@ h1 {
 	margin: 10px;
 }
 
+
+/* LINKS */
+
+a:link, a:visited {  
+    color: #000;  
+    text-decoration: none;  
+    font-size: 13px;  
+    text-shadow: 1px 1px 1px #777;  
+    font-family: 'Alegreya SC', serif; 
+    font-weight: bold;  
+}  
+  
+a:hover {  
+    color: #444; 
+    position: relative; top: -1px; 
+}  
+  
+a:active {  
+    text-shadow: -1px -1px 1px #555;  
+    position: relative;  
+    top: 1px;  
+    left: 1px;  
+}  
+
 /* MAIN CONTENT AREAS */
 
 #wrapper {
 	background: url(../logininfo/images/bg_main.png) repeat;
 	min-height: 800px;
-	width: 1000px;
+	max-width: 1000px;
 	margin: 0 auto;
 	border: 1px #000000 solid;
 }
@@ -28,7 +57,7 @@ h1 {
 	/*min-width: 100%;*/
 	min-height: 190px;
 	background-image: url(../logininfo/images/head.png);
-	padding: 10px;
+	padding: 5px;
 }
 
 #content {
@@ -49,24 +78,33 @@ h1 {
 	/*filter:alpha(opacity=60);
 	-moz-opacity:.60;
 	opacity:.60;*/
-	border: 2px solid black;
+	box-shadow:inset 0 0 2px #000000;
+	border: 1px solid #352304;
 }
 
-#login {
-	text-align: right;
+.search {
+	text-align: left;
+	float: right;
+	padding-left: 22px;
 	display: block;
-	width: 100%;
-}
-
-#search {
-	text-align: right;
-	display: block;
-	width: 100%;
+	width: 95px;
+	background-color: #E4EDF1;
+	/*filter:alpha(opacity=60);
+	-moz-opacity:.60;
+	opacity:.60;
+	box-shadow:inset 0 0 2px #000000;*/
+	border: 1px solid #352304;
+	color: #000;  
+    text-decoration: none;  
+    font-size: 13px;  
+    text-shadow: 1px 1px 1px #777;  
+    font-family: 'Alegreya SC', serif; 
+    font-weight: bold;
 }
 
 #nav ul {
 	padding: 0;
-	margin: 3px auto;
+	margin: 1px auto;
 	vertical-align: middle;
 }
 
@@ -77,7 +115,33 @@ h1 {
 	margin: 0px;
 }
 
+/* LOGIN */
 
+#login {
+	text-align: right;
+	display: block;
+	width: 100%;
+	line-height: 2em;
+}
+
+/*** pop-up div to cover entire area ***/
+.divLoginDialog  {
+	font-size: 11px;
+	/*line-height: 3.5em;*/
+	position: relative;
+	left: 825px;
+	top: 35px;
+    width:180px;
+    height:60px;
+    /*! important !*/
+    display:none;
+    /* last attribute set darkness on scale: 0...1.0 */
+    /*background-color:rgba(0,0,0,0.8);*/
+    text-align:center;
+    z-index:101;
+}
+/*** ! target attribute does the job ! ***/
+.divLoginDialog:target  { display:block; }
 
 
 /*TIMELINE CONTENT */
@@ -88,12 +152,13 @@ h1 {
 }
 
 #time {
+	
 	width: 100%;
 	height: 250px;
 }
 
 .blue {
-	background-color: #E4EDF1;
+	background: url(../logininfo/images/bg_title.png) no-repeat #E4EDF1;
 	/*filter:alpha(opacity=60);
 	-moz-opacity:.60;
 	opacity:.60;*/
@@ -101,5 +166,58 @@ h1 {
 }
 
 .grey {
-	
+	background: url(../logininfo/images/bg_title.png) no-repeat;
 }
+
+
+/* ARTICLES */
+
+#stack {
+	margin: 30px 0 0 180px;
+	height: 250px;
+	width: 250px;
+	display: inline-block;
+}
+
+ul.stacks { 
+	position: absolute;
+	width: 300px; 
+	margin: 0 0 18px -30px; }
+ul.stacks li { 
+	position: absolute;
+	list-style-type: none;}
+ul.stacks a { 
+	background: #fff; 
+	/*display: none;*/ 
+	float: left; 
+	margin: 0 0 27px 30px; 
+	width: auto; 
+	padding: 10px 10px 15px 10px; 
+	text-align: center; 
+	text-decoration: none; 
+	color: #333; 
+	font-size: 11px; 
+	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25); 
+	-moz-box-shadow: 0 3px 6px rgba(0,0,0,.25); 
+	-webkit-transform: rotate(-2deg); 
+	-webkit-transition: -webkit-transform .15s linear; 
+	-moz-transform: rotate(-2deg); 
+}
+ul.stacks img { 
+	/*display: overlay; */
+	width: 190px; 
+	margin-bottom: 20px; 
+}
+ul.stacks a:after { content: attr(title); }
+
+ul.stacks li:nth-child(even) a { -webkit-transform: rotate(2deg);  -moz-transform: rotate(2deg); }
+ul.stacks li:nth-child(3n) a { -webkit-transform: none; position: relative; top: -5px;  -moz-transform: none; }
+ul.stacks li:nth-child(5n) a { -webkit-transform: rotate(5deg); position: relative; right: 5px;  -moz-transform: rotate(5deg); }
+ul.stacks li:nth-child(8n) a { position: relative; right: 5px; top: 8px; }
+ul.stacks li:nth-child(11n) a { position: relative; left: -5px; top: 3px; }
+
+ul.stacks li.messy a { margin-top: -375px; margin-left: 160px; -webkit-transform: rotate(-5deg); -moz-transform: rotate(-5deg); }
+
+ul.stacks li a:hover { -webkit-transform: scale(1.25); -moz-transform: scale(1.25); -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5); -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5); position: relative; z-index: 5; }
+
+
